--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <main>
       <section class="location">
-        <div class="city">New Delhi ,India</div>
-        <div class="date">Thursday 4 March 2022</div>
+        <div class="city">Uttarakhand ,India</div>
+        <div class="date">Sunday 13 March 2022</div>
       </section>
       <div class="current">
         <div class="temp">15<span>°c</span></div>
