--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Weather app</title>
   <link rel="stylesheet" href="main.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="app-wrap">
     <header>
-      <input type="text" autocomplete="on" class="search-box" placeholder="Search for a city..." />
+      <input type="text" autocomplete="on" class="search-box" placeholder="Search for a city..."  />
     </header>
     <main>
       <section class="location">
         <div class="city">Uttarakhand, India</div>
-        <div class="date">Sunday 13 March 2022</div>
+        <div class="date">Sunday 14 March 2022</div>
       </section>
       <div class="current">
         <div class="temp">15<span>°c</span></div>
